增加了cmodel类，调整代码结构 确定随机森林参数

--- a/src/line512.ipynb
+++ b/src/line512.ipynb
@@ -309,18 +309,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0.6740878169449598, 0.6976362442547603, 0.6416062801932367, 0.6684491978609626, 0.7542257137696468, array([[2235,  921],\n",
-      "       [1187, 2125]]), '              precision    recall  f1-score   support\\n\\n           0     0.6531    0.7082    0.6795      3156\\n           1     0.6976    0.6416    0.6684      3312\\n\\n    accuracy                         0.6741      6468\\n   macro avg     0.6754    0.6749    0.6740      6468\\nweighted avg     0.6759    0.6741    0.6739      6468\\n')\n"
-     ]
-    }
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "# 训练SVM\n",
+    "from sklearn import svm\n",
+    "\n",
+    "clf_linear = svm.LinearSVC(C=1.0, sample_weights=cmodel.weights_train)\n",
+    "Cmodel.set_model(clf_linear)"
    ],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
